libs available, random and deterministic select algorithms

--- a/quicksort/makefile
+++ b/quicksort/makefile
@@ -1,6 +1,7 @@
-head=headers.h ../check.h
-src=$(wildcard *.c) ../check.c
+head=headers.h
+src=$(wildcard *.c)
 res=sort
+flags=-Wl,-rpath,../libs/common/ver -L../libs -lcommon 
 
 main: $(src) $(head)
-	gcc  -o $(res) $(src)
+	gcc -o $(res) $(src) $(flags)
